@@ -1,7 +1,10 @@
 #                                               -*- Automake -*-
 # Process this file with automake.
 
-EXTRA_DIST = BUGS HACKING 
+# Distributions files
+bini_docs = BUGS HACKING
+bini_tests = test.sh checkbuild.sh tests/simple.ini
+EXTRA_DIST = $(bini_docs) $(bini_tests) parse.h
 
 bin_PROGRAMS = bini unbini
 unbini_SOURCES = unbini.c pool.c pool.h
